# 2025-09-07-raspberry

./: .gitignore  AGENTS.md  GEMINI.md  README.md  gemini啟動說明.md  main.py  pyproject.toml
mongo3/: GEMINI.md  index.html  main.py  script.js  style.css  todo.md
templates/: index.html
俄羅斯方塊/: GEMINI.md  main.py  todo.md
貪食蛇1/: GEMINI.md  main.py
